Closed Bug 731170 Opened 14 years ago Closed 14 years ago

Download Manager Open containing Folder not working

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla13

People

(Reporter: jmjjeffery, Assigned: bbondy)

References

Details

(Keywords: regression)

Attachments

(1 file)

Open the Download Manager, Ctrl+j or from the Menu button Pick a download in the listing and right-click Choose the option: Open Containing Folder.. Folder does NOT open. No errors in Console. Regression Range: 20120227014549 2dc40eb83023 Good 20120227044549 7d7179d2d809 Bad Needs triage from m-i builds
I suppose may be due to bug 632556, it exactly touched that code
Blocks: 632556
and this makes me think our testing of the functionality may be poor
Assignee: nobody → netzen
Was working with my locally built build, but looking into it now...
Still works with my locally built build consistently. I'll wait for today's Nightly and try that, maybe it's a release only problem or something like that.
Works for me on Windows 7. Reproduced on Windows XP.
OS: Windows 7 → Windows XP
Hardware: x86_64 → x86
Attached patch Patch v1.Splinter Review
CoInitialize/CoUninitialize must be called implicitly on Win7 for SHOpenFolderAndSelectItems which made it so I didn't notice I forgot to call it after moving the code to a thread. Could reproduce with my locally built build on my XP machine only as well and confirmed fixed with this patch.
Attachment #601275 - Flags: review?(benjamin)
Attachment #601275 - Flags: review?(benjamin) → review+
I can reproduce it on my Windows 7 machine even with a clean profile.Are you sure it is XP only? Tested with 20120228 nightly build.
rstrong can reproduce it on his win7 as well so I'm not sure what the difference is, but my win7 definitely cannot reproduce it. In any case it'll be fixed by the changeset in Comment 7 once it is merged to m-c.
Component: Download Manager → XPCOM
Product: Toolkit → Core
QA Contact: download.manager → xpcom
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Verified Fixed using latest hourly m-c build on win32/win7x64 based on cset: https://hg.mozilla.org/mozilla-central/rev/3812d0ce274e
Status: RESOLVED → VERIFIED
well, it's not working again (sort of), in ff26.0, download manager, open containing folder produces an explorer windows that refuses to update in windows 7. a while ago it would update if I hit ctrl-f5 but now even that doesn't work (F5 didn't work). windows 7 provided file (etc) versioning, so you can take a file back to previous dates. I am guessing this works for shortcuts apparently can have a versioning problem in windows 7 where they can get stale or old (this was mentioned against the taskbar on the internet through some googling). wondering if it's elsewhere too, or if it's a specific checkbox or setting in the shortcut that's causing this. I don't know if anything in the download manager is a shortcut or not. I had thought the problem got fixed too. but I found out where the problem is... it stems from firefox doing something odd with explorer.exe?
correction, incorrect statement, it's a guess, not an "I found the problem".
Jim, please open a new bug with steps to reproduce for the problem you're seeing. This particular bug has long been fixed and closed, and the problem you're seeing is different from the one dealt with here.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: