Bug 731170 - Download Manager Open containing Folder not working. r=bsmedberg